--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "@playhearts/hearts_wasm",
   "version": "1.0.2",
   "description": "An API for the card game hearts",
-  "main": "hearts_wasm.js",
+  "main": "src/hearts_wasm.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "dev": "jest --watch"
   },
   "keywords": [
     "wasm",
     "hearts"
   ],
   "author": "jim@play-hearts.online",
+  "types": "src/@types/hearts_wasm/index.d.ts",
   "license": "ISC",
   "repository": {
     "type": "git",
@@ -21,6 +23,12 @@
   },
   "homepage": "https://github.com/play-hearts/hearts_wasm#readme",
   "devDependencies": {
-    "@types/emscripten": "^1.39.5"
+    "@tsconfig/node14": "^1.0.1",
+    "@types/emscripten": "^1.39.5",
+    "@types/jest": "^26.0.24",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.4",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   }
 }
